# agentic-ai-workshop

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.web  LICENSE  README.md  docker-compose.yml  pyproject.toml
docs/: ROADMAP.md  architecture.md
docs/adrs/: 001-document-processing.md  002-embedding-model.md  003-rag-pipeline.md  004-agent-orchestration.md  005-observability.md  006-evaluation.md  007-guardrails.md  008-prompt-management.md  009-structured-outputs.md  010-error-handling.md  011-provider-error-translation.md
scripts/: seed_data.py  smoke_agent.py
src/: __init__.py  config.py  database.py  errors.py  main.py
src/agents/: __init__.py  graph.py  nodes.py  parsers.py  router.py  schemas.py  state.py  tools.py
src/documents/: __init__.py  chunker.py  models.py  naive_chunker.py  router.py  schemas.py  service.py
src/evaluation/: __init__.py  golden_dataset.py  llm_judge.py  metrics.py  router.py  runner.py
src/guardrails/: __init__.py  budget.py  faithfulness.py  pii.py  router.py  validator.py
src/matching/: __init__.py  embedder.py  rag_pipeline.py  reranker.py  retriever.py  router.py  schemas.py  service.py
src/observability/: __init__.py  cost.py  prompts.py  router.py  tracing.py
src/prompts/: __init__.py  loader.py  registry.py  router.py
src/prompts/templates/: cv_parser.yaml  match_scorer.yaml  outreach_email.yaml
src/resilience/: __init__.py  circuit_breaker.py  fallback.py  retry.py  router.py
src/structured/: __init__.py  output_models.py  parser.py  router.py
src/utils/: llm_json.py
tests/: conftest.py
tests/integration/agents/: test_workflow.py
tests/integration/documents/: test_document_api.py
tests/integration/matching/: test_rag_pipeline.py  test_retrieval.py
tests/integration/observability/: test_tracing.py
tests/unit/agents/: test_nodes.py
tests/unit/documents/: test_chunker.py  test_naive_chunker.py
tests/unit/evaluation/: test_metrics.py
web/: package-lock.json  package.json
(+40 files in other folders)
